Table "doctrine_migration_versions" {
  "version" varchar(191) [pk, not null]
  "executed_at" timestamp [default: `NULL::timestamp without time zone`]
  "execution_time" int4
}

Table "greeting" {
  "id" int4 [pk, not null]
  "name" varchar(255) [not null]
}

Table "user" {
  "id" int4 [pk, not null]
  "email" varchar(180) [unique, not null]
  "roles" json [not null]
  "password" varchar(255) [not null]
  "firstname" varchar(255)
  "lastname" varchar(255)
  "username" varchar(255) [unique]
  "photo" varchar(255) [not null]
  "emailverify" bool
  "emaillink" varchar(255)
  "tokenpassword" text
  "deleted_at" timestamp [default: `NULL::timestamp without time zone`]
  "created_at" timestamp [not null, note: '(DC2Type:datetime_immutable)']
}

Table "event" {
  "id" int4 [pk, not null]
  "title" varchar(255) [not null]
  "description" text [not null]
  "datestart" timestamp [not null]
  "dateend" timestamp [not null]
  "location" text [not null]
  "sharelink" varchar(255) [not null]
  "maxparticipant" int4 [not null]
  "img" varchar(255) [not null]
  "deleted_date" timestamp [default: `NULL::timestamp without time zone`]
  "created_at" timestamp [not null, note: '(DC2Type:datetime_immutable)']
  "visibility" int2 [not null]
}

Table "user_event" {
  "id" int4 [pk, not null]
  "event_id" int4 [not null]
  "user_id" int4
  "role" varchar(255) [not null]

  Indexes {
    event_id [type: btree, name: "idx_d96cf1ff71f7e88b"]
    user_id [type: btree, name: "idx_d96cf1ffa76ed395"]
  }
}

Table "user_invitation" {
  "id" int4 [pk, not null]
  "event_id" int4 [not null]
  "link" varchar(255) [not null]
  "expiration" timestamp [not null]
  "user_id_id" int4 [not null]
  "date_invitation" timestamp [not null]
  "date_acceptinvitation" timestamp [default: `NULL::timestamp without time zone`]
  "user_invite_id" int4

  Indexes {
    event_id [type: btree, name: "idx_567aa74e71f7e88b"]
    user_id_id [type: btree, name: "idx_567aa74e9d86650f"]
    user_invite_id [type: btree, name: "idx_567aa74eeaa1faa3"]
  }
}

Ref "fk_d96cf1ff71f7e88b":"event"."id" < "user_event"."event_id"

Ref "fk_d96cf1ffa76ed395":"user"."id" < "user_event"."user_id" [delete: set null]

Ref "fk_567aa74e71f7e88b":"event"."id" < "user_invitation"."event_id"

Ref "fk_567aa74e9d86650f":"user"."id" < "user_invitation"."user_id_id"

Ref "fk_567aa74eeaa1faa3":"user"."id" < "user_invitation"."user_invite_id"
